trab/gramatica
import java.io.*;
import java.util.ArrayList;

COMPILER UPortugol
/* Métodos necessários */
//static int indentation = 0;


String toBlueBold(String s) { 
    return "</span><br/><span style='color: #0000ff;'><strong>"+ s + "</strong></span>";
    
}

String toRedBold(String s) { 
    return  "<span style='color: #ff0000;'><strong>" + s + "</strong></span>";
    
}
String toBlackBold(String s) { 
    return  "<strong>" + s +"</strong>";
}


CHARACTERS
    letra = 'A'..'Z' + 'a'..'z'.
    digito = '0'..'9'.
    linhaComChar = ANY - '\r' - '\n'.
    qualquerCharMenosAspas = linhaComChar - '\"'.

TOKENS
    ident = letra { letra  | digito }.
    numero = ['-'] digito {digito}.
    strConst = '"' { qualquerCharMenosAspas | "\\\""} '"'.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO '\n' 

IGNORE 
    '\n' + '\r' + '\t'

PRODUCTIONS
    
    UPortugol = Bloco { Bloco }.     
    
    Bloco                     (. String res; ArrayList saidaFormatada  = new ArrayList();.)
    = DeclProc <out res>      (. saidaFormatada.add(res); System.out.println(saidaFormatada); .)// v é o valor da expressão/saída O v vem do Bloco
    .                             
    
    DeclProc<out String res>                  (. res = ""; String v1=""; String v2 = ""; .)
    = "procedimento"                          (. res = toBlueBold(t.val); .)   
       ident                                  (. res = res + toBlackBold(t.val); .)      
       "("                                    (. res = res + t.val; .) 
        { 
        Parametros  <out v1>                  (. res = v1 + t.val; .) 
        } 
        ")"                                   (. res = res + t.val; .)  
        [":inteiro" ]                         (. res = res + toRedBold(t.val); .)
        "inicio"                              (. res = res + toBlackBold(t.val); .)
        { Instrucao  <out v2>                 (. res = v2 + t.val; .)  
        }
        "fim"                                 (. res = res + toRedBold(t.val); .)
        .

    Parametros <out String res>     (. res = "";  .)
    =  ident                        (. res =  res + t.val; .)
      ":"                           (. res = res + t.val;.)    
     "inteiro"                      (. res = res + toRedBold(t.val);.)
      [ "[]" ]                      (. res = res + t.val;.) 
      [","]                         (. res = res + t.val;.)    
    . 
    
    Instrucao <out String res>      (. res = ""; String v1=""; String v2 = ""; .)
    = DeclVar <out v1>              (. res = v1 + t.val;.) 
      | ChamaProc  <out v2>         (. res = v2 + t.val;.) 
    .

    DeclVar  <out String res>       (. res = ""; String v1=""; String v2 = ""; .)           
    = ComAtribuicao <out v1>        (. res = v1 + t.val; .)
    ";"                             (. res = res + t.val;.)    
    | SemAtribuicao <out v2>        (. res = v2 + t.val;.)
    ";"                             (. res = res + t.val;.)
    .
    
    SemAtribuicao <out String res>  (. res = ""; .) 
    = "variavel"                    (. res = res + toBlackBold(t.val); .)
    .                  

    ComAtribuicao <out String res>   (. res = ""; .)
    = ident                          (. res = res + t.val; .) 
    "="  
    .

    ChamaProc  <out String res>    (. res = ""; String v1=""; String v2 = ""; .)
    = Designator <out v1>          (. res = v1 + t.val;.) 
    ParamsDeclarados <out v2>      (. res = v2 + t.val;.) 
    ";"                            (. res = res + t.val;.) 
    .
    Designator <out String res>    (. res = "";  .)
    = ident                       (. res = res + t.val;.) 
    .
    //ident "(" Expr ")".


    ParamsDeclarados <out String res>   (. res = "";.)
    = "("                           (. res = res + t.val;.) 
    .
    //= "(" { ident [ Expr ] [ ","] } ")".
 
END UPortugol.

     
  /*  UPortugol = { Bloco }.
    Bloco = DeclProc { Instrucao } .
    DeclProc = "procedimento" ident "(" {Parametros} ")" 
                [":" Tipo ] "inicio" {Instrucao} "fim".
    Tipo = "inteiro".
    Instrucao = DeclVar |
                ChamaProc | Condicao "fimse;"  | Retorno ";" | Escreva .
    Parametros =  ident ":" "inteiro" [ "[]" ][","]. 
    DeclVar = ComAtribuicao ";" | SemAtribuicao ";" .
    SemAtribuicao = "variavel" Expr  [(":" |",")] ["inteiro"] {Expr  [(":" |",")] [Tipo]}. 
    ComAtribuicao = ident "=" Expr .
    ChamaProc = Designator ParamsDeclarados ";".
    ParamsDeclarados  = "(" { ident [ Expr ] [ ","] } ")".
    ParamsPassados = "(" [ Expr {"," Expr}] ")".
    Condicao = "se" Expr OpRelacional Expr "entao" Instrucao  ["senao" Instrucao].
    OpRelacional = "<" | ">" | ">=" | "<=" | "!=".
    Designator = ident "(" Expr ")".
    Expr = ["-"] Termo { ( "+" Termo | "-" Termo ) } .
    Termo = Fator { ( "*" Fator | "/" Fator ) } .
    Fator =  ident ["[" Expr "]"] | numero | "(" Expr ")" | "abs" "(" Expr ")" .
    FatorVetor =  "novo" ident ("[" Expr "]" | Inicializ).
    Inicializ = "{" { numero } "}".
   
    Retorno = "retorne" [Expr] .
    Escreva = "escreva" "(" [Expr] [strConst] [Expr] {  [ Expr ] [strConst] "," [strConst]  Expr }  ");". *
    */
